# mpPy6

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
examples/example1/: example1.py  mp_process.py
examples/example2/: ChildProcess2.py  ChildProcessControl2.py  example2.py
examples/example3/: ChildProcess3.py  ChildProcessControl3.py  example3.py
examples/example4/: CModel.py  ChildProcess4.py  ChildProcessControl4.py  ExampleModel4.py  example4.py
examples/example_simple_function/: example1.py  mp_process.py
examples/examples_using_properties/: example2.py  mp_process.py
src/cmp/: CBase.py  CCommandRecord.py  CException.py  CProcess.py  CProcessControl.py  CProperty.py  CResultRecord.py  __init__.py  testings.py
src/mpPy6/: CCommandRecord.py  CProcess.py  CProcessControl.py  CProperty.py  CResultRecord.py  __init__.py  testings.py
tests/: test_interchange_commands.py
