[project]
name = "cmp"
version = "0.1.0"
authors = [
  { name="Christoph Schmidt", email="cschmidt.fs@gmail.com" },
]
description = "A Pyside-to-Process Control lass"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'PySide6', 'rich'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.tugraz.at/flexsensor-public/---"