[project]
name = "mpPy6"
version = "6.0.0"
authors = [
    { name="Christoph Schmidt",  email="cschmidt.fs@gmail.com"},
]
description = "A Pyside-to-Process Control class to facilitate communication between multiple processes while utilizing PySide6 for graphical user interfaces (GUIs). This module aims to provide a seamless solution for building applications with parallel processing capabilities and interactive UI components."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'PySide6',
    'rich'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/agentsmith29/mpPy6"